GUI-2957 fix modal resizing and overflow

--- a/stylesheets/less/partials/modal.less
+++ b/stylesheets/less/partials/modal.less
@@ -3,11 +3,10 @@
     display: none;
     .position(absolute, 0, 0, 0, 0);
     .size(@max-width: 99%, @max-height: 99%);
-    .rounded;
+    .rounded(5px 5px 4px 4px);
     z-index: 40;
     box-shadow: 0px 0px 10px 3px rgba(0,0,0, .4);
     background-color: @color-white;
-    overflow: hidden;
     // .auto-selection;
 
     .modalHeader {
@@ -18,6 +17,8 @@
         line-height: 36px;
         text-align: center;
         text-shadow: 1px 1px rgba(0,0,0,0.2);
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px;
 
         .text {
             .font(@weight: bold, @size: 18px, @color: @color-text-white);
@@ -95,7 +96,7 @@
 
     .modalBottom {
         .size(@width: 100%, @height: 50px);
-        background-color: @color-white;
+        .rounded(0 0 4px 4px);
         .no-selection;
 
         .btn {
@@ -139,7 +140,7 @@
     opacity: 1;
     z-index: 40;
     display: none;
-    .rounded(2px);
+    .rounded;
     overflow: visible;
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.2);
     .transition(opacity 0.3s);
@@ -239,6 +240,7 @@
         text-overflow: ellipsis;
         white-space: nowrap;
         padding: 0 30px;
+        .rounded(3px 3px 0px 0px);
     }
 
     .jsonArea {
@@ -498,7 +500,6 @@
 /* Quick Aggregate Modal */
 #aggModal {
     .size(@width: 920px, @height: 650px, @min-height: ~"600px !important");
-    resize: both;
 
     .modalTopMain {
         .size(@height: 57px);
@@ -634,7 +635,6 @@
 /* Join Modal */
 #joinModal {
     .size(@width: 920px, @height: 670px);
-    resize: both;
 
     .modalTopMain {
         .size(@height: 57px);
@@ -2715,7 +2715,7 @@ html.microsoft {
 
     .modalBottom {
         height: 64px;
-        border-radius: 3px;
+        .rounded(4px);
         .btn {
             margin: 15px 15px 0 0;
         }
@@ -3529,10 +3529,6 @@ html.microsoft {
     overflow: visible;
     bottom: auto;
 
-    .modalHeader {
-        border-radius: 3px 3px 0 0;
-    }
-
     .modalInstruction {
         .icon {
             .background('/images/info-icon-xl.png', 32px, 32px);
@@ -3990,7 +3986,6 @@ html.microsoft {
 
     .modalBottom {
         padding: 4px 15px 10px 0px;
-        border-radius: 0 0 3px 3px;
 
         .btn {
              margin-left: 20px;
@@ -4007,6 +4002,7 @@ html.microsoft {
         &.modalMain {
             display: block !important;
             padding-left: 15px;
+            .rounded(0px 0px 4px 4px);
         }
     }
 
